force-app/main/default/objects/Colores_Estado_Castillete__c/Colores_Estado_Castillete__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Colores Estado Castillete</label>
</CustomObject>