force-app/main/default/objects/Colores_Estado_Castillete__c/fields/Apalabrado__c.field-meta.xml
<CustomField>
    <fullName>Apalabrado__c</fullName>
    <label>Apalabrado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>