force-app/main/default/objects/Colores_Estado_Castillete__c/fields/Apartado__c.field-meta.xml
<CustomField>
    <fullName>Apartado__c</fullName>
    <label>Apartado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>