force-app/main/default/objects/Colores_Estado_Castillete__c/fields/Asociado__c.field-meta.xml
<CustomField>
    <fullName>Asociado__c</fullName>
    <label>Asociado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>