force-app/main/default/objects/Colores_Estado_Castillete__c/fields/Bloqueado__c.field-meta.xml
<CustomField>
    <fullName>Bloqueado__c</fullName>
    <label>Bloqueado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>