force-app/main/default/objects/Colores_Estado_Castillete__c/fields/Bloqueado_Temporalmente__c.field-meta.xml
<CustomField>
    <fullName>Bloqueado_Temporalmente__c</fullName>
    <label>Bloqueado Temporalmente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>