force-app/main/default/objects/Colores_Estado_Castillete__c/fields/Cancelado__c.field-meta.xml
<CustomField>
    <fullName>Cancelado__c</fullName>
    <label>Cancelado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>