force-app/main/default/objects/Colores_Estado_Castillete__c/fields/Canje__c.field-meta.xml
<CustomField>
    <fullName>Canje__c</fullName>
    <label>Canje</label>
    <length>100</length>
    <type>Text</type>
</CustomField>