force-app/main/default/objects/Colores_Estado_Castillete__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <label>Contrato</label>
    <length>100</length>
    <type>Text</type>
</CustomField>