force-app/main/default/objects/Colores_Estado_Castillete__c/fields/Escriturado__c.field-meta.xml
<CustomField>
    <fullName>Escriturado__c</fullName>
    <label>Escriturado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>