force-app/main/default/objects/Colores_Estado_Castillete__c/fields/Libre__c.field-meta.xml
<CustomField>
    <fullName>Libre__c</fullName>
    <label>Libre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>