force-app/main/default/objects/Colores_Estado_Castillete__c/fields/Permuta__c.field-meta.xml
<CustomField>
    <fullName>Permuta__c</fullName>
    <label>Permuta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>