force-app/main/default/objects/Colores_Estado_Castillete__c/fields/Reservado__c.field-meta.xml
<CustomField>
    <fullName>Reservado__c</fullName>
    <label>Reservado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>